test/testdata/classes/methods/static/missing_1_arg_error.lox
class Foo {
  static add(a, b) {
    print a + b;
  }
}

Foo.add(1); // error: Foo.add() missing 1 argument: b
